# mirea-microservices

./: docker-compose.yaml  docker-compose.yml  krakend.json  prometheus.yml
crates/cringy-blog-blogs/: Cargo.toml  Dockerfile  docker-compose.yaml
crates/cringy-blog-blogs/src/: main.rs  schema.rs
crates/cringy-blog-blogs/src/route/: mod.rs
crates/cringy-blog-tasks/: .env  Cargo.toml  Dockerfile  docker-compose.yaml
crates/cringy-blog-tasks/src/: data.rs  main.rs  utils.rs
crates/cringy-blog-tasks/src/data/: model.rs  repository.rs
crates/cringy-blog-tasks/src/route/: mod.rs  task.rs
