[package]
name = "cringy-blog-tasks"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.22.0", features = ["rt-multi-thread", "macros", "sync"] }
axum = "0.6.0-rc.5"
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
anyhow = { version = "1.0.66", features = ["std"] }
dotenv = "0.15.0"
derive_more = "0.99.17"
async-trait = "0.1.58"
