[package]
name = "cringy-blog-tasks"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.22.0", features = ["rt-multi-thread", "macros", "sync"] }
axum = "0.6.0-rc.5"
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
anyhow = "1.0.66"
dotenv = "0.15.0"
derive_more = "0.99.17"
async-trait = "0.1.58"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
